--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><h3><a href="https://github.com/CartoDB/carto-vl">GitHub repository</a><h3></li>
     <li><h3><a href="debug/bq-tileset/index.html">BigQuery Tileset</a></h3></li>
     <li><h3><a href="debug/bq-tileset/editor.html">BigQuery Tileset Editor</a></h3></li>
+    <li><h3><a href="debug/bq-tileset/editor-compare.html">BigQuery Tileset Editor Compare</a></h3></li>
   </ul>
 </body>
 </html>
