--- a/debug/bq-tileset/index.html
+++ b/debug/bq-tileset/index.html
@@ -30,7 +30,7 @@
         const project = 'cartodb-gcp-backend-data-team';
         const dataset = 'carto_tilesets'
         const tileset = 'unacast_grouped_21';
-        const token = 'ya29.a0AfH6SMAkCXPx_y9Ox6WXzEmzpgO-Fdg4nCSsfFRsJSzoEuHX4gVxo6UbcjiJaDZ6dQ87P0tz0UAjttPQrZJLtv-WSqvnmfbmAIHr1sNEje_uB1SOrk3EN5n-kz2smo5Ltd7jMkmlzgNcUzEoYp1Ypuf5ygxC3IzHs-fScQpTAc6xv204sldCsEbHFpXGr8Bu8Zs7Cm_6f1zfDrjEuCEEtPmG8k5SNTi60TD6V--ufW7kA9rwH7x0AaZvaKEK3NTZjjECq25pJLLY';
+        const token = '';
 
         const data = { project, dataset, tileset, token };
         const metadata = { extend_maxzoom_tiles: true };
